[package]
name = "text-blind-watermark"
version = "0.1.5"
edition = "2021"
authors = ["Guo Fei <me@guofei.site>"]
description = "Text Blind Watermark in Rust"
license = "MIT"

[dependencies]
rand = "0.8.5"
CryptTool = "0.1.1"
#signal-transforms = "*"


[lib]
name = "text_blind_watermark"
path = "src/lib.rs"