[package]
name = "hidden_watermark"
version = "0.1.6"
edition = "2021"
authors = ["Guo Fei <me@guofei.site>"]
description = "Hidden Watermark in Rust"
license = "MIT"
repository = "https://github.com/guofei9987/signal-transforms"
keywords = ["watermark", "hide", "text", "image"]


[lib]
name = "hidden_watermark"
path = "src/lib.rs"


[dependencies]
CryptTool = "0.1.3"
#signal-transforms = "*"

